--- a/h/templates/activity/search.html.jinja2
+++ b/h/templates/activity/search.html.jinja2
@@ -220,12 +220,12 @@
     <input type="hidden" name="q" value="{{ q }}">
     {% if organization %}
       <div class="search-result-sidebar__organization">
-        <span class="search-result-sidebar__org-logo"> 
+        <span class="search-result-sidebar__org-logo">
           {% if organization.logo %}
             <img src="{{ organization.logo }}" alt="Organization logo" class='search-result-sidebar__logo'></img>
           {% endif %}
         </span>
-        <span class="search-result-sidebar__org-name"> 
+        <span class="search-result-sidebar__org-name">
           {{ organization.name }}
         </span>
       </div>
@@ -315,7 +315,7 @@
           <p>{{ paragraph }}</p>
         {% endfor %}
       {% endif %}
-    
+
       <div class="search-result-sidebar__subsection">
       {% if stats.annotation_count %}
         <p class="search-result-sidebar__subsection-p">
@@ -372,7 +372,8 @@
 {% endmacro %}
 
 {% block header %}
-  {{ panel('navbar', search_results, opts) }}
+  {% from "h:templates/includes/navbar.html.jinja2" import navbar with context %}
+  {{ navbar(search=search_results, opts=opts) }}
 {% endblock %}
 
 {% block content %}
